# ocrdlp-lab

./: .env  .env.example  .gitignore  AGENTS.md  CLI_APPLICATION_COMPLETE.md  CRAWLER_MVP.md  FINAL_TEST_VERIFICATION.md  FINAL_VERIFICATION.md  PROJECT_SUMMARY.md  README.md  README_IMAGE_LABELING.md  demo_labeling_vs_extraction.py  gpt4v_analyzer.py  gpt4v_image_labeler.py  http_client.py  ocrdlp.bat  ocrdlp.py  pyproject.toml  requirements.txt  run_image_labeling_test.bat  test_image_labeling.py  test_viability.py
crawler/: __init__.py  deduplicator.py  filters.py  image_crawler.py  search.py
dataset/: __init__.py  data_organizer.py  dataset_manager.py
datasets/: DATASET_GENERATION_WORKFLOW.md  README.md
datasets/brazil_id_dataset/: SEARCH_API_TEST_VERIFICATION.md
datasets/brazil_id_dataset/labels/: brazil_id_labels_summary.md
datasets/invoice_dataset/: README.md
datasets/invoice_dataset/labels/: invoice_labels_summary.md
tests/: __init__.py  conftest.py  test_cli.py  test_crawler.py  test_http_client.py  test_image_labeling.py  test_integration_complete.py  test_labeler_exceptions.py  test_serper_integration.py  test_viability.py
